--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeepStack AI WebApp</title>
+    <link rel="stylesheet" href="httpsmaxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         #uploadSection {
             display: none;
@@ -11,53 +12,67 @@
     </style>
 </head>
 <body>
-    <h1>DeepStack AI WebApp</h1>
+    <div class="container">
+        <h1 class="mt-4">DeepStack AI WebApp</h1>
 
-    <!-- Password Section -->
-    <section>
-        <h2>Enter Password to Access Upload Section</h2>
-        <form id="passwordForm">
-            <input type="password" id="password" placeholder="Enter password" required>
-            <button type="submit">Submit</button>
-        </form>
-    </section>
+        <!-- Password Section -->
+        <section>
+            <h2>Enter Password to Access Upload Section</h2>
+            <form id="passwordForm">
+                <div class="form-group">
+                    <input type="password" id="password" class="form-control" placeholder="Enter password" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
 
-    <!-- Upload New Faces Section -->
-    <section id="uploadSection">
-        <h2>Upload New Faces</h2>
-        <form action="/upload-face" method="post" enctype="multipart/form-data">
-            <input type="text" name="name" placeholder="Enter person's name" required>
-            <input type="file" name="image" required>
-            <button type="submit">Upload</button>
-        </form>
-    </section>
+        <!-- Upload New Faces Section -->
+        <section id="uploadSection">
+            <h2>Upload New Faces</h2>
+            <form action="/upload-face" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <input type="text" name="name" class="form-control" placeholder="Enter person's name" required>
+                </div>
+                <div class="form-group">
+                    <input type="file" name="image" class="form-control-file" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Upload</button>
+            </form>
+        </section>
 
-    <!-- Face Recognition Section -->
-    <section>
-        <h2>Face Recognition</h2>
-        <form action="/recognize-face" method="post" enctype="multipart/form-data">
-            <input type="file" name="image" required>
-            <button type="submit">Submit</button>
-        </form>
-    </section>
+        <!-- Face Recognition Section -->
+        <section>
+            <h2>Face Recognition</h2>
+            <form action="/recognize-face" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <input type="file" name="image" class="form-control-file" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
 
-    <!-- License Plate Recognition Section -->
-    <section>
-        <h2>License Plate Recognition</h2>
-        <form action="/recognize-license" method="post" enctype="multipart/form-data">
-            <input type="file" name="image" required>
-            <button type="submit">Submit</button>
-        </form>
-    </section>
+        <!-- License Plate Recognition Section -->
+        <section>
+            <h2>License Plate Recognition</h2>
+            <form action="/recognize-license" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <input type="file" name="image" class="form-control-file" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
 
-    <!-- OCR Recognition Section -->
-    <section>
-        <h2>OCR Recognition</h2>
-        <form action="/recognize-ocr" method="post" enctype="multipart/form-data">
-            <input type="file" name="image" required>
-            <button type="submit">Submit</button>
-        </form>
-    </section>
+        <!-- OCR Recognition Section -->
+        <section>
+            <h2>OCR Recognition</h2>
+            <form action="/recognize-ocr" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <input type="file" name="image" class="form-control-file" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
+    </div>
 
     <script>
         document.getElementById('passwordForm').addEventListener('submit', async function(e) {
