--- a/app/public/index.html
+++ b/app/public/index.html
@@ -32,7 +32,7 @@
             <h2>Upload New Faces</h2>
             <form id="uploadFaceForm" enctype="multipart/form-data">
                 <div class="form-group">
-                    <input type="text" name="name" class="form-control" placeholder="Enter person's name" required>
+                    <input type="text" name="userid" class="form-control" placeholder="Enter person's name" required>
                 </div>
                 <div class="form-group">
                     <input type="file" name="image" class="form-control-file" required>
